# html_page_reader

./: README.md  pyproject.toml
page_reader/: cli.py  parser.py
tests/: test_page_reader_parser.py
tests/data/: ref_clean_text_wiki_poland.txt  ref_html_wiki_poland.txt  test_html_data.py
